2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-widths): Divide the extra width more fairly over
	the TDs (bug#10973).
	(shr-render-td): Don't delete too much padding.
	(shr-natural-width): Compute the natural width more correctly.
	(shr-insert): Allow the natural width to be computed for tables again.

	* gnus-msg.el (gnus-bug): Don't delete the other windows.  We may be
	using a `gnus-use-full-window' setup (bug#11013).

2012-03-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-backend-trace): Flip default to nil before Emacs
	24.1 release.

2012-03-10  David Edmondson  <dme@dme.org>

	* mm-uu.el (mm-uu-forward-extract): Allow for blank lines between the
	'Forwarded Message' header and the start of the message.

2012-03-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

	* gnus-msg.el (gnus-msg-mail): Call `message-mail' correctly when Gnus
	isn't running (bug#10897).

2012-03-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* tls.el (open-tls-stream): Don't set the dont-query-on-exit flag.
	This is inconsistent with all the other stream functions, which leave
	the setting up to the higher levels (if so wanted) (bug#10931).

2012-02-28  Glenn Morris  <rgm@gnu.org>

	* gmm-utils.el, gnus-agent.el, gnus-score.el, messagexmas.el,
	mm-decode.el: Standardize possessive apostrophe usage.

2012-02-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-column-specs): Protect against TDs with "width: 0%".

2012-02-25  Andreas Schwab  <schwab@linux-m68k.org>

	* parse-time.el (parse-time-string): Allow extractor to return nil.

2012-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-send-authinfo): Work for secure nntp entry in authinfo.

2012-02-20  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Remove "soft hyphens".

	* nnimap.el (nnimap-request-list): Return the group names encoded as
	utf8.  Otherwise non-European group names don't work.
	(nnimap-request-newgroups): Ditto.
